--- a/Universe-Colonist/UniverseColonistServices/_Data/Definitions/Buildings/LaunchTowerRockets.json
+++ b/Universe-Colonist/UniverseColonistServices/_Data/Definitions/Buildings/LaunchTowerRockets.json
@@ -2,45 +2,45 @@
   {
      "Xp":1100
     ,"Level":1
-    ,"Value":"1"
+    ,"FlyingRocketCount":"1"
   },
   {
      "Xp":1300
     ,"Level":2
-    ,"Value":"2"
+    ,"FlyingRocketCount":"2"
   },
   {
      "Xp":1600
     ,"Level":3
-    ,"Value":"3"
+    ,"FlyingRocketCount":"3"
   },
   {
      "Xp":2100
     ,"Level":4
-    ,"Value":"4"
+    ,"FlyingRocketCount":"4"
   },
   {
      "Xp":3400
     ,"Level":5
-    ,"Value":"5"
+    ,"FlyingRocketCount":"5"
   },
   {
      "Xp":7400
     ,"Level":6
-    ,"Value":"8"
+    ,"FlyingRocketCount":"8"
   },
   {
      "Xp":25500
     ,"Level":7
-    ,"Value":"13"
+    ,"FlyingRocketCount":"13"
   },
   {
      "Xp":189000
     ,"Level":8
-    ,"Value":"21"
+    ,"FlyingRocketCount":"21"
   },
   {
      "Xp":4830000
     ,"Level":9
-    ,"Value":"34"
+    ,"FlyingRocketCount":"34"
   }]
